# kv-canary

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: smoke.yaml  v1-validate.yaml  v1.yaml
docs/: RESEARCH.md  RUNBOOK.md  index.html
docs/superpowers/plans/: 2026-06-11-kv-canary-v1.md
docs/superpowers/specs/: 2026-06-11-kv-canary-design.md
kvcanary/: __main__.py  types.py
kvcanary/backends/: base.py  compressed_cache.py  fake.py  hf.py
kvcanary/compressors/: base.py  full.py  quantized.py  snapkv.py  streamingllm.py
kvcanary/data/: tool_calls.jsonl
kvcanary/metrics/: aggregate.py  sds.py
kvcanary/report/: chart.py  markdown.py
kvcanary/runner/: config.py  registry.py  runner.py
kvcanary/tasks/: base.py  code_exec.py  loaders.py  perplexity.py  tool_call.py
scripts/: aggregate_and_report.py  probe_rope.py  run_gpu.sh
tests/: test_backend_hf.py  test_backends_fake.py  test_cli_smoke.py  test_compressed_cache.py  test_compressors.py  test_config.py  test_loaders.py  test_metrics.py  test_report.py  test_runner.py  test_smoke_import.py  test_tasks_code.py  test_tasks_perplexity.py  test_tasks_tool.py  test_types.py
