[project]
name = "kvcanary"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["pyyaml>=6"]
[project.optional-dependencies]
ml = ["torch>=2.2", "transformers>=4.44", "matplotlib>=3.8", "datasets>=2.19"]
dev = ["pytest>=8", "ruff>=0.6"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["kvcanary*"]
[tool.setuptools.package-data]
kvcanary = ["data/*.jsonl"]

[tool.pytest.ini_options]
markers = [
    "slow: loads a real model (CPU, downloads weights)",
    "network: downloads a real dataset from the HF Hub",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint.per-file-ignores]
# tests legitimately import after pytest.importorskip(...) and append imports next to the
# tests that use them, which both trip E402 (import-not-at-top).
"tests/**" = ["E402"]
